--- a/html_css3_I/css/site.css
+++ b/html_css3_I/css/site.css
@@ -15,6 +15,10 @@ main h1{
 	font-family: "Arial";
 }
 
+main a{
+	color: #851944;
+}
+
 h2{
 	font-size: 40px;
 	font-family: "Open Sans", "Arial", sans-serif;
@@ -23,4 +27,23 @@ h2{
 p{
 	text-align: justify;
 	font-family: "times New Roman", "Baskerville", serif;
+}
+
+blockquote{
+	background-color: #D9E5E3;
+}
+
+aside{
+	background-color: #3C1D3D;
+	color: #F2FFFC;
+}
+
+aside a{
+	color: inherit;
+	font-family: "Open Sans Condensed", sans-serif;
+}
+
+footer{
+	background-color: #000;
+	color: #F2FFFC;
 }
